// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout demo -- full-header 1`] = `
.emotion-10.uc-fe-layout {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 40px;
}

.emotion-10.uc-fe-layout-has-sider {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0.uc-fe-header {
  padding: 20px;
}

.emotion-8.uc-fe-layout-footer {
  padding: 20px;
}

.emotion-10.uc-fe-layout {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 40px;
}

.emotion-10.uc-fe-layout-has-sider {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0.uc-fe-header {
  padding: 20px;
}

.emotion-8.uc-fe-layout-footer {
  padding: 20px;
}

<div
  class="uc-fe-layout emotion-10 emotion-11"
>
  <div
    class="uc-fe-header emotion-0 emotion-1"
    style="text-align:center;color:#000;height:64px;line-height:64px;background-color:#EAEEFD"
  >
    Header
  </div>
  <div
    class="uc-fe-layout emotion-10 emotion-11"
  >
    <aside
      class="uc-fe-sider emotion-2 emotion-3"
      style="text-align:center;line-height:120px;color:#fff;background-color:#c1d4fa;flex:0 0 200;width:200px"
    >
      Sider
    </aside>
    <div
      class="uc-fe-layout emotion-10 emotion-11"
    >
      <div
        class="uc-fe-header emotion-0 emotion-1"
        style="text-align:center;color:#000;height:64px;line-height:64px;background-color:#EAEEFD"
      >
        Sub Header
      </div>
      <div
        class="uc-fe-layout emotion-6 emotion-7"
        style="text-align:center;min-height:120px;line-height:120px;color:#fff;background-color:#95bff7"
      >
        Content
      </div>
      <div
        class="uc-fe-layout-footer emotion-8 emotion-9"
        style="text-align:center;color:#fff;background-color:#7dbcea"
      >
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout demo -- full-sider 1`] = `
.emotion-10.uc-fe-layout {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 40px;
}

.emotion-10.uc-fe-layout-has-sider {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2.uc-fe-header {
  padding: 20px;
}

.emotion-8.uc-fe-layout-footer {
  padding: 20px;
}

.emotion-10.uc-fe-layout {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 40px;
}

.emotion-10.uc-fe-layout-has-sider {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2.uc-fe-header {
  padding: 20px;
}

.emotion-8.uc-fe-layout-footer {
  padding: 20px;
}

<div
  class="uc-fe-layout emotion-10 emotion-11"
>
  <aside
    class="uc-fe-sider emotion-0 emotion-1"
    style="text-align:center;line-height:120px;color:#fff;background-color:#c1d4fa;flex:0 0 200;width:200px"
  >
    Sider
  </aside>
  <div
    class="uc-fe-layout emotion-10 emotion-11"
  >
    <div
      class="uc-fe-header emotion-2 emotion-3"
      style="text-align:center;color:#000;height:64px;line-height:64px;background-color:#EAEEFD"
    >
      Header
    </div>
    <div
      class="uc-fe-header emotion-2 emotion-3"
      style="text-align:center;color:#000;height:64px;line-height:64px;background-color:#EAEEFD"
    >
      Sub Header
    </div>
    <div
      class="uc-fe-layout emotion-6 emotion-7"
      style="text-align:center;min-height:120px;line-height:120px;color:#fff;background-color:#95bff7"
    >
      Content
    </div>
    <div
      class="uc-fe-layout-footer emotion-8 emotion-9"
      style="text-align:center;color:#fff;background-color:#7dbcea"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Layout demo -- no-sider 1`] = `
.emotion-8.uc-fe-layout {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 40px;
}

.emotion-8.uc-fe-layout-has-sider {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0.uc-fe-header {
  padding: 20px;
}

.emotion-6.uc-fe-layout-footer {
  padding: 20px;
}

.emotion-8.uc-fe-layout {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 40px;
}

.emotion-8.uc-fe-layout-has-sider {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0.uc-fe-header {
  padding: 20px;
}

.emotion-6.uc-fe-layout-footer {
  padding: 20px;
}

<div
  class="uc-fe-layout emotion-8 emotion-9"
>
  <div
    class="uc-fe-header emotion-0 emotion-1"
    style="text-align:center;color:#000;height:64px;line-height:64px;background-color:#EAEEFD"
  >
    Header
  </div>
  <div
    class="uc-fe-header emotion-0 emotion-1"
    style="text-align:center;color:#000;height:64px;line-height:64px;background-color:#EAEEFD"
  >
    Sub Header
  </div>
  <div
    class="uc-fe-layout emotion-4 emotion-5"
    style="text-align:center;min-height:120px;line-height:120px;color:#fff;background-color:#95bff7"
  >
    Content
  </div>
  <div
    class="uc-fe-layout-footer emotion-6 emotion-7"
    style="text-align:center;color:#fff;background-color:#7dbcea"
  >
    Footer
  </div>
</div>
`;
